bitbucket-readable-commit-messages: fix selectors
HTML layout at bitbucket.org changed.  Overhaul selectors to not use the
mangled CSS classnames.  Use nested CSS rules to reduce code
duplication.  https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Nesting/Using

--- a/bitbucket-readable-commit-messages.user.css
+++ b/bitbucket-readable-commit-messages.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Bitbucket: readable commit messages
 @namespace   https://github.com/rybak/atlassian-tweaks
-@version     5
+@version     6
 @description Make commit messages on Bitbucket Cloud more readable
 @license     MIT
 @homepageURL https://github.com/rybak/atlassian-tweaks
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 
 /*
- * Copyright (c) 2023-2024 Andrei Rybak
+ * Copyright (c) 2023-2026 Andrei Rybak
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -38,25 +38,26 @@
  */
 
 @-moz-document regexp("https://bitbucket.org/.*/commits/[^?]+") {
-/*
- * Fixes for readability
- */
+	/*
+	 * Fixes for readability
+	 */
 
-/* border around the whole commit message */
-.css-1120ym1 > div:nth-child(1) > div:not([data-qa="commit-list-container"]):not([class]) {
-	border: borderWidth solid borderColor;
-	border-radius: borderRadius;
-	padding: paddingSize;
-}
-if monospaceEnable {
-	/* monospace text */
-	.css-1120ym1 > div:nth-child(1) > div:not([data-qa="commit-list-container"]):not([class]) {
-		font-family: monospace;
+	/* border around the whole commit message */
+	[role="main"] div:has([aria-label="Breadcrumbs"]) + div + div {
+		border: borderWidth solid borderColor;
+		border-radius: borderRadius;
+		padding: paddingSize;
+
+		/* make the subject line of commit message bold */
+		p:first-child {
+			font-weight: bold;
+		}
+
+		if monospaceEnable {
+			/* monospace text */
+			& {
+				font-family: monospace;
+			}
+		}
 	}
-}
-
-/* make the subject line of commit message bold */
-.css-1120ym1 > div:nth-child(1) > div:not([data-qa="commit-list-container"]):not([class]) > p:first-child {
-	font-weight: bold;
-}
 }
